tests/src/frontend/syntax/invalid/under_ident_2.sk
class Foo<T> {
  const _: void = void;
}
